Day 11 part 2. This is exactly what I tried last time, but I presumably messed up the implementation.